--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Users list</h1>
+    <h1>Список пользователей</h1>
 
     <table>
         <thead>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <th>Email</th>
-                <th>Role</th>
-                <th>Password</th>
+                <th>Роль</th>
+                <th>Пароль</th>
                 <th>Salt</th>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>Actions</th>
+                <th>Имя</th>
+                <th>Фамилия</th>
+                <th>Действия</th>
             </tr>
         </thead>
         <tbody>
@@ -29,10 +29,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('user_show', { 'id': user.id }) }}">show</a>
+                            <a href="{{ path('user_show', { 'id': user.id }) }}">Показать</a>
                         </li>
                         <li>
-                            <a href="{{ path('user_edit', { 'id': user.id }) }}">edit</a>
+                            <a href="{{ path('user_edit', { 'id': user.id }) }}">Редактировать</a>
                         </li>
                     </ul>
                 </td>
@@ -43,7 +43,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('user_new') }}">Create a new user</a>
+            <a href="{{ path('user_new') }}">Создать нового пользователя</a>
         </li>
     </ul>
 {% endblock %}
