--- a/app/Resources/views/user/show.html.twig
+++ b/app/Resources/views/user/show.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Пользователь</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
@@ -14,11 +14,11 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>Role</th>
+                <th>Роль</th>
                 <td>{{ user.role }}</td>
             </tr>
             <tr>
-                <th>Password</th>
+                <th>Пароль</th>
                 <td>{{ user.password }}</td>
             </tr>
             <tr>
@@ -26,11 +26,11 @@
                 <td>{{ user.salt }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Имя</th>
                 <td>{{ user.name }}</td>
             </tr>
             <tr>
-                <th>Surname</th>
+                <th>Фамилия</th>
                 <td>{{ user.surname }}</td>
             </tr>
         </tbody>
@@ -38,15 +38,13 @@
 
     <ul>
         <li>
-            <a href="{{ path('user_index') }}">Back to the list</a>
+            <a href="{{ path('user_index') }}">Назад к списку</a>
         </li>
         <li>
-            <a href="{{ path('user_edit', { 'id': user.id }) }}">Edit</a>
+            <a href="{{ path('user_edit', { 'id': user.id }) }}">Редактировать</a>
         </li>
         <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
+            <a href="{{ path('user_delete', { 'id': user.id }) }}">Удалить</a>
         </li>
     </ul>
 {% endblock %}
