--- a/app/Resources/views/workingshift/show.html.twig
+++ b/app/Resources/views/workingshift/show.html.twig
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <th>Дата</th>
-                <td>{% if workingShift.date %}{{ workingShift.date|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if workingShift.date %}{{ workingShift.date|date('Y-m-d') }}{% endif %}</td>
             </tr>
             <tr>
                 <th>Количество</th>
