add auth and style

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,48 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}Склад{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    {% block header %}
+        <nav class="navbar navbar-default">
+            <div class="container" style="background-color: lightsteelblue">
+                <div class="navbar-header">
+                    {% if app.user %}
+                        <a class="navbar-brand" href="{{ path('logout') }}"><div class="text-danger">Выйти</div></a>
+                        <a class="navbar-brand" href="{{ path('user_show', {'id': app.user.id}) }}"><div class="text-success">{{ app.user.name }} {{ app.user.surname }}</div></a>
+                    {% else %}
+                        <a class="navbar-brand" href="{{ path('login') }}"><div class="text-danger">Войти</div></a>
+                        <a class="navbar-brand" href="{{ path('user_index') }}"><div class="text-success">Склад</div></a>
+                    {% endif %}
+                </div>
+
+                <div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{ path('user_index') }}">Пользователи</a></li>
+                        <li><a href="{{ path('porter_index') }}">Грузчики</a></li>
+                        <li><a href="{{ path('product_index') }}">Товары</a></li>
+                        <li><a href="{{ path('workingshift_index') }}">Рабочии смены</a></li>
+                        <li><a href="#">Отчет</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    {% endblock %}
+
+    {% block body %}{% endblock %}
+    {% block javascripts %}{% endblock %}
     </body>
 </html>
