--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="container" style="background-color: #C9C9C9">
     <h1>Список пользователей</h1>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>ID</th>
@@ -39,7 +40,8 @@
 
     <ul>
         <li>
-            <a href="{{ path('user_new') }}">Создать нового пользователя</a>
+            <a href="{{ path('user_new') }}">Создать пользователя</a>
         </li>
     </ul>
+</div>
 {% endblock %}
