--- a/app/Resources/views/product/show.html.twig
+++ b/app/Resources/views/product/show.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="container" style="background-color: #C9C9C9">
     <h1>Товар</h1>
 
-    <table>
+    <table class="table">
         <tbody>
             <tr>
                 <th>ID</th>
@@ -35,4 +36,5 @@
             <a href="{{ path('product_delete', { 'id': product.id }) }}">Удалить</a>
         </li>
     </ul>
+</div>
 {% endblock %}
