--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,11 +32,16 @@
 
                 <div>
                     <ul class="nav navbar-nav">
-                        <li><a href="{{ path('user_index') }}">Пользователи</a></li>
                         <li><a href="{{ path('porter_index') }}">Грузчики</a></li>
                         <li><a href="{{ path('product_index') }}">Товары</a></li>
-                        <li><a href="{{ path('workingshift_index') }}">Рабочии смены</a></li>
-                        <li><a href="#">Отчет</a></li>
+                        {% if is_granted('ROLE_USER') %}
+                            <li><a href="{{ path('workingshift_index') }}">Рабочии смены</a></li>
+                        {% endif %}
+
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li><a href="{{ path('workingshift_index') }}">Отчет</a></li>
+                            <li><a href="{{ path('user_index') }}">Пользователи</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
