--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -39,7 +39,7 @@
                 <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
 
-            <input type="hidden" name="_target_path" value="/user/" />
+            <input type="hidden" name="_target_path" value="/porter/" />
             <div>
                 <button type="submit" class="btn btn-primary">Войти</button>
             </div>
