--- a/app/Resources/views/user/show.html.twig
+++ b/app/Resources/views/user/show.html.twig
@@ -30,9 +30,11 @@
     </table>
 
     <ul>
+        {% if is_granted('ROLE_ADMIN') %}
         <li>
             <a href="{{ path('user_index') }}">Назад к списку</a>
         </li>
+        {% endif %}
         <li>
             <a href="{{ path('user_edit', { 'id': user.id }) }}">Редактировать</a>
         </li>
