--- a/app/Resources/views/porter/edit.html.twig
+++ b/app/Resources/views/porter/edit.html.twig
@@ -9,10 +9,7 @@
         <input type="submit" value="Обновить" />
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('porter_index') }}">Назад к списку</a>
-        </li>
-    </ul>
+    <br>
+    <a class="btn btn-success" href="{{ path('porter_index') }}">Назад к списку</a>
 </div>
 {% endblock %}
