--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -9,12 +9,9 @@
         <input type="submit" value="Обновить" />
     {{ form_end(edit_form) }}
 
+    <br>
     {% if is_granted('ROLE_ADMIN') %}
-    <ul>
-        <li>
-            <a href="{{ path('user_index') }}">Назад к списку</a>
-        </li>
-    </ul>
+        <a class="btn btn-success" href="{{ path('user_index') }}">Назад к списку</a>
     {% endif %}
 </div>
 {% endblock %}
