--- a/app/Resources/views/user/show.html.twig
+++ b/app/Resources/views/user/show.html.twig
@@ -29,18 +29,10 @@
         </tbody>
     </table>
 
-    <ul>
         {% if is_granted('ROLE_ADMIN') %}
-        <li>
-            <a href="{{ path('user_index') }}">Назад к списку</a>
-        </li>
+            <a class="btn btn-success" href="{{ path('user_index') }}">Назад к списку</a>
         {% endif %}
-        <li>
-            <a href="{{ path('user_edit', { 'id': user.id }) }}">Редактировать</a>
-        </li>
-        <li>
-            <a href="{{ path('user_delete', { 'id': user.id }) }}">Удалить</a>
-        </li>
-    </ul>
+            <a class="btn btn-success" href="{{ path('user_edit', { 'id': user.id }) }}">Редактировать</a>
+            <a class="btn btn-success" href="{{ path('user_delete', { 'id': user.id }) }}">Удалить</a>
 </div>
 {% endblock %}
