add reg new user

--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -42,6 +42,7 @@
             <input type="hidden" name="_target_path" value="/porter/" />
             <div>
                 <button type="submit" class="btn btn-primary">Войти</button>
+                <a href="{{ path('user_new') }}">Регистрация</a>
             </div>
         </form>
     </div>
